# Chat

./: CMakeLists.txt  MyApplication.cpp  README.md  myApplication.cpp
src/: CMakeLists.txt  Chat.cpp  CorreServidor.cpp
src/Controlador/: AnalizadorJSON.cpp  AnalizadorJSON.h  CMakeLists.txt  GeneradorJSON.cpp  GeneradorJSON.h
src/Modelo/: CMakeLists.txt  Cliente.cpp  Cliente.h  Servidor.cpp  Servidor.h  Status.cpp  Usuario.cpp
src/Vista/: Despliegue.cpp  Despliegue.h  Despligue.h
